--- a/labs/lab3.html
+++ b/labs/lab3.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Lab3: Lu, Edbert</h1>
-        <p>Working with Github</p>
+        <p>Working with GitHub</p>
     </body>
 </html>
