--- a/projects/2/bustracker.html
+++ b/projects/2/bustracker.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Bus Times</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <style>
 
   </style>
@@ -23,6 +25,7 @@
   <div id="addWstbd"></div>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
       <script>
         $("#submit").click(function() {
           $("div").empty();
