--- a/projects/2/bustracker.html
+++ b/projects/2/bustracker.html
@@ -4,9 +4,30 @@
   <meta charset="utf-8">
   <title>Bus Times</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" /> 
   <style>
-
+    body {text-align:center;}
+    hr {margin:0% 25%;}
+    select#routeAndStop {
+       -webkit-appearance: button;
+       -webkit-border-radius: 2px;
+       -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+       -webkit-padding-end: 20px;
+       -webkit-padding-start: 2px;
+       -webkit-user-select: none;
+       background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+       background-position: 97% center;
+       background-repeat: no-repeat;
+       border: 1px solid #AAA;
+       color: #555;
+       font-size: inherit;
+       margin: 20px;
+       overflow: hidden;
+       padding: 7px 14px;
+       text-overflow: ellipsis;
+       white-space: nowrap;
+       width: 300px;
+    }
   </style>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
@@ -18,7 +39,7 @@
         <option value="rt=152&stpid=12527">Addison Eastbound</option>
         <option value="rt=152&stpid=12569">Addison Westbound</option>
     </select>
-        <button id="submit">Submit</button>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" id="submit">Submit</button>
   <div id="wstNrthbd"></div>    
   <div id="wstSthbd"></div>    
   <div id="addEstbd"></div>    
