--- a/projects/2/index.html
+++ b/projects/2/index.html
@@ -4,15 +4,16 @@
         <title>CTA Bus Tracker </title>
     </head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" /> 
     <style>
-        
+        body {text-align:center;}
+        p {margin:0% 25%;padding:0 0 3% 0;}
     </style>
     <body>
         <h1>CTA Bus Tracker</h1>
         <p>The mobile bus tracker app will display predicted arrival times of Addison and Western stops using data from the bus tracker API. To use the app, click on the button below to go to the page. Select a stop from a dropdown box and click the "Submit" button to display times.</p>
         <form method="get" action="bustracker.html">
-            <button type="submit">Use Tracker</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Use Tracker</button>
         </form>
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </body>
