--- a/projects/2/index.html
+++ b/projects/2/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>CTA Bus Tracker </title>
     </head>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" /> 
     <style>
@@ -10,11 +11,32 @@
         p {margin:0% 25%;padding:0 0 3% 0;}
     </style>
     <body>
-        <h1>CTA Bus Tracker</h1>
-        <p>The mobile bus tracker app will display predicted arrival times of Addison and Western stops using data from the bus tracker API. To use the app, click on the button below to go to the page. Select a stop from a dropdown box and click the "Submit" button to display times.</p>
-        <form method="get" action="bustracker.html">
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Use Tracker</button>
-        </form>
+        <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+          <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+              <span class="mdl-layout-title">CTA Bus Tracker</span>
+              <div class="mdl-layout-spacer"></div>
+              <nav class="mdl-navigation mdl-layout--large-screen-only">
+                <a class="mdl-navigation__link" href="bustracker.html">Bus Times</a>
+              </nav>
+            </div>
+          </header>
+          <div class="mdl-layout__drawer">
+            <span class="mdl-layout-title">CTA Bus Tracker</span>
+            <nav class="mdl-navigation">
+              <a class="mdl-navigation__link" href="bustracker.html">Bus Times</a>
+            </nav>
+          </div>
+          <main class="mdl-layout__content">
+            <div class="page-content">
+                <h1>CTA Bus Tracker</h1>
+                <p>The mobile bus tracker app will display predicted arrival times of Addison and Western stops using data from the bus tracker API. To use the app, click on the button below to go to the page. Select a stop from a dropdown box and click the "Submit" button to display times.</p>
+                <form method="get" action="bustracker.html">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Use Tracker</button>
+                </form>
+            </div>
+          </main>
+        </div>        
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     </body>
 </html>
