--- a/about.html
+++ b/about.html
@@ -59,26 +59,18 @@
                         <h2 class="mdl-card__title-text">About</h2>
                     </div>
                     <div class="mdl-card__media">
-                        <img class="article-image" src=" images/about-header.jpg" border="0" alt="">
+                        <img class="article-image" src=" images/about-header.png" border="0" alt="">
                     </div>
 
                     <div class="mdl-grid portfolio-copy">
                         <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Introduction</h3>
                         <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
                             <p>
-                                I am Edbert Lu, attending Lane Tech High School, currently in 10th grade. I am taking the Web Developement course this year 
+                                I am Edbert Lu, attending Lane Tech High School, currently in 10th grade. I am taking the Web Developement course this year. I plan on continuing my computer science course throughout the rest of high school and likely into college.  
                             </p>
                         </div>
 
-
-
-
-                        <h3 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Irure mollit est sit labore</h3>
-
                         <div class="mdl-cell mdl-cell--8-col mdl-card__supporting-text no-padding ">
-                            <p>
-                                
-                            </p>
                         </div>
                     </div>
                 </div>
