--- a/labs/6/index.html
+++ b/labs/6/index.html
@@ -10,12 +10,12 @@
             <link rel=manifest href=manifest.json>
             <meta name=mobile-web-app-capable content=yes>
             <meta name=application-name content="Air Horner">
-            <link rel=icon sizes=192x192 href=/images/touch/Airhorner_192.png>
+            <link rel=icon sizes=192x192 href=./images/touch/Airhorner_192.png>
             <meta name=apple-mobile-web-app-capable content=yes>
             <meta name=apple-mobile-web-app-status-bar-style content=black>
             <meta name=apple-mobile-web-app-title content="Air Horner">
-            <link rel=apple-touch-icon href=/images/touch/Airhorner_192.png>
-            <meta name=msapplication-TileImage content=/images/touch/Airhorner_144.png>
+            <link rel=apple-touch-icon href=./images/touch/Airhorner_192.png>
+            <meta name=msapplication-TileImage content=./images/touch/Airhorner_144.png>
             <meta name=msapplication-TileColor content=#2196F3>
             <meta name=theme-color content=#2196F3>
             <meta property=og:title content="Air Horn">
@@ -40,7 +40,7 @@
                         </div>
                   </div>
             </div>
-            <script src=/scripts/main.min.js></script>
+            <script src=./scripts/main.min.js></script>
             <script>
                  
                   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -54,10 +54,10 @@
             <script>
                   if('serviceWorker' in navigator) {
                     navigator.serviceWorker
-                             .register('/sw.js')
+                             .register('./sw.js')
                              .then(function() { console.log("Service Worker Registered"); });
                   }
-            </script>
+            </script>          
       </body>
 
 </html>
