--- a/projects/4/index.html
+++ b/projects/4/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-orange.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Three Screen App</title>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Morning App</title>
       <style>
           .screen {
               display: none;
@@ -60,7 +62,7 @@
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <!-- Title -->
-          <span class="mdl-layout-title">Three Screen App</span>
+          <span class="mdl-layout-title">Morning App</span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
@@ -72,7 +74,7 @@
         </div>
       </header>
       <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Three Screen App</span>
+        <span class="mdl-layout-title">Morning App</span>
         <nav class="mdl-navigation">
           <a id="link1" class="mdl-navigation__link" href="#">Train Tracker</a>
           <a id="link2" class="mdl-navigation__link" href="#">Albums</a>
@@ -96,30 +98,29 @@
           <div class="mdl-grid">
               <div class="mdl-cell mdl-cell--4-col">
                 <div class="demo-card-square mdl-card mdl-shadow--2dp">
-                  <div class="mdl-card__title mdl-card--expand" style=background:url(img/bts_wings.png)>
+                  <div class="mdl-card__title mdl-card--expand" style=background:url(img/taeyeon_my_voice.png)>
                     <h2 class="mdl-card__title-text"></h2>
                   </div>
                   <div class="mdl-card__supporting-text">
                     Tracklist:
                     <ol>
-                    <li>Intro: Boy Meets Evil</li>
-                    <li>Blood Sweat & Tears</li>
-                    <li>Begin</li>
-                    <li>Lie</li>
-                    <li>Stigma</li>
-                    <li>First Love</li>
-                    <li>MAMA</li>
-                    <li>Awake</li>
-                    <li>Lost</li>
-                    <li>BTS Cypher 4</li>
-                    <li>Am I Wrong</li>
-                    <li>21st Century Girl (21세기 소녀)</li>
-                    <li>Two! Three! (Hoping for Better Days) (둘! 셋! (그래도 좋은 날이 더 많기를))</li>
-                    <li>Interlude: Wings</li>
+                    <li>Fine</li>
+                    <li>Cover Up</li>
+                    <li>날개 (Feel So Fine)</li>
+                    <li>I Got Love</li>
+                    <li>I’m OK</li>
+                    <li>Time Lapse</li>
+                    <li>Sweet Love</li>
+                    <li>When I Was Young</li>
+                    <li>Lonely Night</li>
+                    <li>수채화 (Love in Color)</li>
+                    <li>Fire</li>
+                    <li>Eraser</li>
+                    <li>기억을 걷는 시간 (The Time of Walking on Remembrance)</li>
                     </ol>
                   </div>
                   <div class="mdl-card__actions mdl-card--border">
-                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.youtube.com/watch?v=hmE9f-TEutc">
+                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.youtube.com/watch?v=NHXUM-6a3dU">
                       Title Track
                     </a>
                   </div>
@@ -150,26 +151,35 @@
               
               <div class="mdl-cell mdl-cell--4-col">
                 <div class="demo-card-square mdl-card mdl-shadow--2dp">
-                  <div class="mdl-card__title mdl-card--expand" style=background:url(img/bts_hyym_pt2.png)>
+                  <div class="mdl-card__title mdl-card--expand" style=background:url(img/bts_ynwa.png)>
                     <h2 class="mdl-card__title-text"></h2>
                   </div>
                   <div class="mdl-card__supporting-text">
                     Tracklist:
                     <ol>
-                    <li>Intro: Never Mind</li>
-                    <li>Run</li>
-                    <li>Butterfly</li>
-                    <li>Whalien 52</li>
-                    <li>Ma City</li>
-                    <li>뱁새 (Baepsae/Silver Spoon)</li>
-                    <li>Skit: One Night in a Strange City</li>
-                    <li>고엽 (Dead Leaves)</li>
-                    <li>Outro: House of Cards</li>
+                    <li>Intro: Boy Meets Evil</li>
+                    <li>Blood Sweat & Tears</li>
+                    <li>Begin</li>
+                    <li>Lie</li>
+                    <li>Stigma</li>
+                    <li>First Love</li>
+                    <li>Reflection</li>
+                    <li>MAMA</li>
+                    <li>Awake</li>
+                    <li>Lost</li>
+                    <li>BTS Cypher 4</li>
+                    <li>Am I Wrong</li>
+                    <li>21st Century Girl (21세기 소녀)</li>
+                    <li>Two! Three! (Hoping for Better Days) (둘! 셋! (그래도 좋은 날이 더 많기를))</li>
+                    <li>봄날 (Spring Day)</li>
+                    <li>Not Today</li>
+                    <li>Outro: Wings</li>
+                    <li>A Supplementary Story : You Never Walk Alone</li>
                     </ol>
                   </div>
                   <div class="mdl-card__actions mdl-card--border">
-                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.youtube.com/watch?v=5Wn85Ge22FQ">
-                      Title Track
+                    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.youtube.com/watch?v=hmE9f-TEutc">
+                      Title Track 
                     </a>
                   </div>
                 </div>
@@ -297,7 +307,7 @@
               <label class="mdl-textfield__label" for="sample1">Text...</label>
             </div>
           </form>
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" id="submit">Submit</button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" id="submit1">Submit</button>
         </div>
       </main>
     </div>
@@ -373,6 +383,17 @@
                $("#screen3").show();
            });
         });
+
+        if ('serviceWorker' in navigator) {
+          console.log("Will the service worker register?");
+          navigator.serviceWorker.register('service-worker.js')
+            .then(function(reg){
+              console.log("Yes, it did.");
+            }).catch(function(err) {
+              console.log("No it didn't. This happened: ", err);
+            });
+        }
+
     </script>
     
   </body>
