--- a/projects/4/index.html
+++ b/projects/4/index.html
@@ -392,6 +392,9 @@
         
         $("#enter").click(function() {
            $("#nameIn").append($("#nameInput").val());
+           if ($("#nameIn")) {
+             
+           }
            $("#phoneIn").append($("#phoneInput").val());
            $("#emailIn").append($("#emailInput").val());
         });
