--- a/projects/3/index.html
+++ b/projects/3/index.html
@@ -145,6 +145,20 @@
                         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://github.com/elu000/webdevs2/blob/master/projects/2/index.html">Folder</a>
                     </div>
                 </div>
+                <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+                    <div class="mdl-card__media">
+                        <img class="article-image" src=" images/fcc_banner.png" border="0" alt="">
+                    </div>
+                    <div class="mdl-card__title">
+                        <h2 class="mdl-card__title-text">Free Code Camp</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Free Code Camp is a nonprofit organization with an interactive learning platform. Worked on lessons, specifically Basic JavaScript, Object Oriented and Functional Programming, and Basic Algothirm scripting. 
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="https://www.freecodecamp.com/">Website</a>
+                    </div>
+                </div>    
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
