--- a/projects/2/index.html
+++ b/projects/2/index.html
@@ -5,7 +5,8 @@
     </head>
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-pink.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-orange.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {text-align:center;}
         p {margin:0% 25%;padding:0 0 3% 0;}
