--- a/projects/5/index.html
+++ b/projects/5/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>Canvas Drawing</title>
         <style>
             canvas {
               border: #333 1px solid;
