--- a/projects/BrickBreaker/index.html
+++ b/projects/BrickBreaker/index.html
@@ -133,11 +133,15 @@
                 	    if(y + dy < ballRadius){
                         	dy = -dy;
                         } else if(y + dy > canvas.height - ballRadius) {
+                            lives --;
+                                dy = -dy;
                         	if(x > paddleX && x < paddleX + paddleWidth) {
                         		dy = -dy;
                         	} else {
-                        	    alert("GAME OVER");
-	                            document.location.reload();
+                                    if (lives == 0) {
+                                    alert("GAME OVER");
+                                    document.location.reload();
+                                }
                         	}
                         }
                         if(x + dx > canvas.width - ballRadius || x + dx < ballRadius){
